--- a/assets/repo/repo.conf
+++ b/assets/repo/repo.conf
@@ -6,7 +6,7 @@ Label "Rugmj's Repo";
 Suite stable;
 Version 1.0;
 Codename rugmj;
-Architectures iphoneos-arm64e iphoneos-arm;
+Architectures iphoneos-arm64e iphoneos-arm iphoneos-arm;
 Components main;
 Description "Rugmj's Repo";
 };
